@@ -1,0 +1,4 @@
+syntax error at test.pl line 4, near ") {"
+syntax error at test.pl line 8, near "$fake_var
+}"
+Execution of test.pl aborted due to compilation errors.
