@@ -1,0 +1,11 @@
+// this file contains errors on purpose
+package main
+
+import "fmt"
+
+func main() {
+    var s int = "xx"
+    fmt.Printf("Hello, World!\n")
+    FakeMethod()
+    
+}
