@@ -1,0 +1,8 @@
+# this file contains errors on purpose
+use strict;
+
+foreachx $_ (@ARGV) {
+   my $oldfile = $_;
+   fake_method($oldfile);
+   $fake_var
+}
